fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ body {
     margin-right    : 224px;
 }
 
-h1, h2, h3, h4, h5 {
+main h1, main h2, main h3, main h4, main h5,
+footer h1, footer h2, footer h3, footer h4, footer h5 {
     font-family     : rubik;
     margin-top      : 8px;
     margin-bottom   : 8px;
@@ -33,8 +34,8 @@ p {
 body section h2 {
     margin-top      : 0px;
     margin-bottom   : 0px;
-    margin-left     : 2px;
-    margin-right    : 2px;
+    margin-left     : 0px;
+    margin-right    : 0px;
 }
 
 body section {
@@ -42,10 +43,10 @@ body section {
     background-color: var(--bnkpaper);
     outline         : solid 3px var(--outlines);
 
-    padding-top     : 4px;
-    padding-bottom  : 4px;
-    padding-left    : 8px;
-    padding-right   : 8px;
+    padding-top     : 8px;
+    padding-bottom  : 8px;
+    padding-left    : 24px;
+    padding-right   : 24px;
 }
 
 main {
